Working on: Make post body in the same way readable as Safari's reader view (Issue #6)

--- a/assets/scss/theme/comments/comments.scss
+++ b/assets/scss/theme/comments/comments.scss
@@ -1,6 +1,9 @@
 @mixin comments {
   @include colors(default);
 
+  padding: $top $left;
+  @include border(normal, all);
+
   a {
     @include link;
   }
